# TP-LLM-finetuning-centrale

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
notebooks/: 01_synthetic_dataset_generation.ipynb  02_lora_finetuning.ipynb
scripts/: start_vllm.sh  test_vllm.sh
