[project]
name = "tp-llm-finetuning-centrale"
version = "0.1.0"
description = "Explore synth dataset generation and LLM finetuning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.16.0",
    "openai>=1.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "python-dotenv>=1.0.0",
]
