[project]
name = "tp-llm-finetuning-centrale"
version = "0.1.0"
description = "Experiment with synth dataset generation and LLM finetuning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.4.0",
    "openai>=1.102.0",
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "tqdm>=4.67.1",
    "jupyter>=1.1.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "transformers>=4.55.0",
    "accelerate>=1.10.0",
    "peft>=0.17.0",
    "bitsandbytes>=0.46.0",
    "trl>=0.7.0",
    "unsloth>=2025.8.0",
    "trackio>=0.1.0",
]

